--- a/docker/flask/templates/index.html
+++ b/docker/flask/templates/index.html
@@ -215,7 +215,7 @@
       </div>
     </div>
     <script type="text/javascript">
-      var socket = io.connect('localhost:5000');
+      var socket = io.connect('0.0.0.0:5000');
       socket.on('connect', function() {
         socket.emit('my event', {data: 'I\'m connected!'});
       });
