--- a/docker/flask/templates/index.html
+++ b/docker/flask/templates/index.html
@@ -8,11 +8,6 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../static/css/index.css">
@@ -69,7 +64,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/led-lamp.png" alt="">
-            <form method="post">
+            <form>
               <div class="card-body">
                   <h3 class="card-title">LED Light</h3>
                     <input id="colorpicker" name="ledSwitch" type="color" onChange={led_change(this.value)}>
@@ -88,11 +83,11 @@
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/thermometer.png" alt="">
             <div class="card-body">
               <h3 class="card-title">Temperature Sensor</h3>
-              <h2 style="background-color: rgba(218, 213, 213, 0.788)" id="Temperature">NULL
-              </h2>
+              <h3 style="background-color: rgba(218, 213, 213, 0.788)" id="Temperature">Processing...
+              </h3>
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
+              <button type="button" class="btn btn-primary">
                 Submit
               </button>
             </div>
@@ -101,7 +96,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/rain.png" alt="">
-            <form onsubmit="forecast_submit(this); return false" method="post">
+            <form onsubmit="forecast_submit(this); return false">
               <div class="card-body">
                   <h3 class="card-title">Weather Forecast</h3>
                   <input type="text" name="forecast" placeholder="City, Province/Country" />
@@ -117,7 +112,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/shield.png" alt="">
-            <form onsubmit="pin_submit(this); return false" method="post">
+            <form onsubmit="pin_submit(this); return false">
               <div class="card-body">
                   <h3 class="card-title">Pin Lock Security Combo</h3>
                   <input type="text" name="pinCombo" pattern="[1-3]{4}" maxlength="4" placeholder="Set Pin Code" />
@@ -140,15 +135,16 @@
         </div>
         <!-- /.container -->
       </footer>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript">
-      var socket = io.connect('0.0.0.0:5000');
+      var socket = io.connect('127.0.0.1:5000');
       socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
+          socket.emit('my event', {data: 'I\'m connected!'});
       });
       socket.on('temperature', function(data){update_temperature(data)});
       function update_temperature(temperature)
       {
-        document.getElementById('Temperature').innerText = temperature;
+          document.getElementById('Temperature').innerText = temperature;
       }
       function led_change(value)
       {
@@ -161,8 +157,6 @@
       }
       function forecast_submit(form)
       {
-          print("testing connection")
-          // console.log(form.forecast.value); Could use the json values to display on browser too
           socket.emit('weather_location', form.forecast.value)
       }
     </script>
