--- a/docker/flask/templates/index.html
+++ b/docker/flask/templates/index.html
@@ -81,16 +81,18 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/thermometer.png" alt="">
-            <div class="card-body">
-              <h3 class="card-title">Temperature Sensor</h3>
-              <h3 style="background-color: rgba(218, 213, 213, 0.788)" id="Temperature">Processing...
-              </h3>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="btn btn-primary">
-                Submit
-              </button>
-            </div>
+              <form method="POST" name=temperatureThread>
+                <div class="card-body">
+                  <h3 class="card-title">Temperature Sensor</h3>
+                  <h3 style="background-color: rgba(218, 213, 213, 0.788)" id="Temperature">Processing...
+                  </h3>
+                </div>
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary">
+                    Submit
+                  </button>
+                </div>
+              </form>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-4">
