--- a/docker/flask/templates/index.html
+++ b/docker/flask/templates/index.html
@@ -81,7 +81,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
             <img style="width: 50%; align-self: center" class="card-img-top" src="../static/img/thermometer.png" alt="">
-              <form method="POST" name=temperatureThread>
+              <form name=temperatureThread>
                 <div class="card-body">
                   <h3 class="card-title">Temperature Sensor</h3>
                   <h3 style="background-color: rgba(218, 213, 213, 0.788)" id="Temperature">Processing...
