--- a/docker/flask/templates/index.html
+++ b/docker/flask/templates/index.html
@@ -133,7 +133,8 @@
       </footer>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript">
-      var socket = io.connect('127.0.0.1:5000');
+      var ip = location.host;
+      var socket = io.connect(ip);
       socket.on('connect', function() {
           socket.emit('my event', {data: 'I\'m connected!'});
 
